# snake-ai-pytorch

./: .gitignore  README.md  agent.py  benchmark.py  game.py  model_base.py  model_dqn.py  model_pg.py  model_ppo.py  play.py  pyproject.toml
model/: model.pth  model_pg.pth
