[project]
name = "snake-ai-pytorch"
version = "0.1.0"
description = "A Snake game AI implementation using PyTorch and PPO"
authors = []
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",  # For plotting training metrics
    "ipython>=8.0.0",    # For interactive development
    "tqdm>=4.66.0",      # For progress bars
    "psutil>=5.9.0",     # For memory monitoring in benchmarks
    "tabulate>=0.9.0",   # For formatting benchmark results
]


[tool.ruff]
line-length = 120
